--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.21.1",
     "commitizen": "^4.2.2",
     "eslint-config-airbnb": "^18.2.1",
+    "lodash": "^4.17.21",
+    "material-ui-search-bar": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
