--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@react-mock/state": "^0.1.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "commitizen": "^4.2.2",
     "eslint-config-airbnb": "^18.2.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-mock-axios": "^4.3.0",
     "lodash": "^4.17.21",
     "material-ui-search-bar": "^1.0.0",
     "prop-types": "^15.7.2",
